--- a/part1/conclusion.tex
+++ b/part1/conclusion.tex
@@ -15,7 +15,7 @@ Dans un premier temps, nous avons comparé ce problème avec les
 problèmes existant dans la littérature. Cette comparaison nous a
 permis de montrer que les techniques de résolution existantes ne
 pouvaient pas s'appliquer directement dans le cadre du \CECSP. De
-plus, le profil variable de consommation de la ressource rendaient la
+plus, le profil variable de consommation de la ressource rend la
 résolution de ce problème a priori délicate. En effet, dans le cas
 général, la quantité de ressource allouée à une activité peut varier à
 tout moment ce qui accroît la difficulté de résolution puisque
