--- a/part2/CECSP/PPC_CECSP.tex
+++ b/part2/CECSP/PPC_CECSP.tex
@@ -34,10 +34,10 @@ présenterons les adaptations des raisonnements Time-Table
 (\ref{sec:TT_CECSP}), disjonctif et Time-Table disjonctif
 (\ref{sec:TTDR_CECSP}).  
 
-Dans un second temps (\ref{sec:TTFlot_CECSP}, nous présenterons un nouveau
+Dans un second temps (\ref{sec:TTFlot_CECSP}), nous présenterons un nouveau
 raisonnement étendu, couplant Time-Table et problème de flots. 
 
-Enfin, une adaptation complète du raisonnement énergétique est décrit
+Enfin, une adaptation complète du raisonnement énergétique est décrite 
 dans la section~\ref{sec:ER_CECSP}.
 
 % Le dernier paragraphe sera quant à lui consacré à la présentation d'un
