--- a/part2/CuSP/PPC.tex
+++ b/part2/CuSP/PPC.tex
@@ -360,7 +360,7 @@ les contraintes $c_0$ ($x_0 < x_1$) et $c_1$ ($x_1 < x_2$).
 
 
 Une deuxième technique permettant la réduction de l'espace de
-recherche est l'utilisation d'algortihme de {\it filtrage}. Un
+recherche est l'utilisation d'algorithme de {\it filtrage}. Un
 algorithme de filtrage est aussi défini pour chaque contrainte et cet
 algorithme consiste à détecter et à retirer des domaines des
 variables, des valeurs qui ne sont pas cohérentes avec la contrainte.
