--- a/part4/instances.tex
+++ b/part4/instances.tex
@@ -11,6 +11,7 @@ pré-traitement à leur résolution.
 
 \subsection{Instances du \CECSP}
 \label{sec:instance_CECSP}
+
 Les instances utilisées dans le cadre du \CECSP~sont regroupées en
 quatre familles selon les caractéristiques de leurs fonctions de
 rendement et de l'énergie que les activités requièrent. Dans un
@@ -20,11 +21,11 @@ celles-ci afin de les séparer en différentes familles.
 
 Tout d'abord, deux ensembles de cinq instances chacun comportant
 respectivement $10$ et $60$ activités ainsi que trois ensembles de dix
-instances chacun comportant respectivement $20$, $25$ et $30$ activités sont
-générés. Pour toutes ces instances, la disponibilité de la ressource
-est fixée à $R=10$ et les autres paramètres du problème sont générés
-de façon aléatoire selon une loi uniforme et dans les intervalles
-suivants:
+instances chacun comportant respectivement $20$, $25$ et $30$
+activités sont générés. Pour toutes ces instances, la disponibilité de
+la ressource est fixée à $R=10$ et les autres paramètres du problème
+sont générés de façon aléatoire selon une loi uniforme et dans les
+intervalles suivants:
 \begin{itemize}
 \item $W_i \in [1 , \frac{5}{4} * R]$,
 \item $\bmin \in [0, \frac{1}{4} * W_i]$,
@@ -44,7 +45,8 @@ loi uniforme et telle que:
 \begin{itemize}
 \item $a_i \in [1,10]$ et
 \item $c_i \in [1,10]$.
-\end{itemize} La valeur de $W_i$ est ensuite modifiée à l'aide de ces
+\end{itemize} 
+La valeur de $W_i$ est ensuite modifiée à l'aide de ces
 fonctions $f_i$. Les trois autres familles d'instances sont classées
 suivant cette modification. Pour la première famille, appelée Famille
 1, la nouvelle valeur de $W_i$ est générée aléatoirement, selon une
