--- a/part4/res_PL.tex
+++ b/part4/res_PL.tex
@@ -114,7 +114,7 @@ encourageante dans un futur proche.
 
 \subsection{Modèles à événements}
 
-Cette sous-section, dédié à la présentation des résultats obtenus pour les
+Cette sous-section, dédiée à la présentation des résultats obtenus pour les
 modèles à événements, commence par présenter l'algorithme de
 séparation qui sera utilisé dans le modèle On/Off pour séparer les
 inégalités de non préemption. Cet algorithme a été conçu en
@@ -330,12 +330,12 @@ ajoutée au modèle, est:
 \subsubsection{Modèles Start/End}
 
 Dans ce paragraphe, nous présentons les résultats obtenus pour le
-modèle Start/End.  Les expérimentations ont été conduites
-sur les instances de la Famille 1 présentée dans la
-sous-section~\ref{sec:instance_CECSP} et avec une limite de temps de 
-1000 secondes. Le modèle est utilisé avec l'objectif de minimisation de la
-consommation totale de ressource. Le
-tableau~\ref{tab:SE_CECSP} présente ces résultats.
+modèle Start/End.  Les expérimentations ont été conduites sur les
+instances de la Famille 1 présentée dans la
+sous-section~\ref{sec:instance_CECSP} et avec une limite de temps de
+1000 secondes. Le modèle est utilisé avec l'objectif de minimisation
+de la consommation totale de ressource. Le tableau~\ref{tab:SE_CECSP}
+présente ces résultats.
 
 Dans ce tableau, nous avons comparé la qualité et le temps d'obtention
 des premières solutions pour chaque famille d'instances testées. Nous
@@ -361,9 +361,12 @@ $60$ & $310$ & $140$ & $7200$ & $63$ & $100$ & $0 $\\
 \hline 
     \end{tabularx}
   \end{center}
-  \caption{Résultats du modèle Start/End pour le \CECSP.} 
+  \caption{Résultats du modèle Start/End pour le \CECSP (Famille 1).} 
   \label{tab:SE_CECSP}
 \end{table}
+
+
+
 
 Dans le tableau~\ref{tab:SE_CECSP}, nous pouvons voir que le modèle
 Start/End permet de résoudre seulement une petite partie des instances
