--- a/part4/res_PPC.tex
+++ b/part4/res_PPC.tex
@@ -327,7 +327,7 @@ deux raisonnements combinés. Pour chaque ligne, la première colonne
 correspond au temps nécessaire à la résolution des instances. La
 seconde exhibe le temps passé dans l'arbre de branchement. Enfin, la
 troisième et quatrième colonne présentent respectivement le nombre de
-PLNE résolus et le nombre de noeudss dans l'arbre.
+PLNE résolus et le nombre de noeuds dans l'arbre.
 
 
 \begin{table}[!htb]
