--- a/main_file.bib
+++ b/main_file.bib
@@ -142,6 +142,18 @@ url = "http://www.sciencedirect.com/science/article/pii/S0925527310003683",
 author = "Christian Artigues and Pierre Lopez and Alain Haït"
 }
 
+@misc{Ex1,
+  author = {M.N. Hung, C. Le Van and P. Michel},
+  title = {{Non-convex aggregative technology and optimal economic growth}},
+  howpublished = "\url{ftp://www-bsg.univ-paris1.fr/pub/mse/cahiers2005/B05095.pdf}",
+  year = {2005}}
+  
+  @misc{Ex2,
+  author = {J. Lewis},
+  title = {{Algebra symposium: Optimizing fuel consumption}},
+  howpublished = "\url{http://homepages.math.uic.edu/~jlewis/math165/asavgcost.pdf}",
+  year = {2008}}
+
 @article{CAVT,
 title = "Project scheduling with resource constraints: A branch and bound approach",
 journal = "European Journal of Operational Research",
