--- a/main_file.tex
+++ b/main_file.tex
@@ -38,15 +38,24 @@
 
 %% Judges
 \njudge{8}
-\makesomeone{judge}{1}{Christian ARTIGUES}{Directeur de recherche au CNRS, LAAS-CNRS}{Directeur de thèse}
-\makesomeone{judge}{2}{Philippe BAPTISTE}{Directeur de recherche au CNRS}{Rapporteur}
+\makesomeone{judge}{1}{Christian ARTIGUES}{Directeur de recherche au
+  CNRS, LAAS-CNRS\\
+\vspace{0.3cm}}{Directeur de thèse}
+\makesomeone{judge}{2}{Philippe BAPTISTE}{Directeur de recherche au CNRS\\
+
+\vspace{0.3cm}}{Rapporteur}
 \makesomeone{judge}{3}{Cyril BRIAND}{Professeur,
-  Université Toulouse 3-Paul Sabatier}{Examinateur}
-\makesomeone{judge}{4}{Tam{\'a}s KIS}{Research fellow, MTA SZTAKI, Budapest, Hongrie}{Examinateur}
-\makesomeone{judge}{5}{Philippe LABORIE}{Principal Scientist, IBM, Paris}{Examinateur}
-\makesomeone{judge}{6}{Pierre LOPEZ}{Directeur de recherche au CNRS, LAAS-CNRS}{Directeur
+  Université Toulouse 3-Paul Sabatier\\
+\vspace{0.3cm}}{Examinateur}
+\makesomeone{judge}{4}{Tam{\'a}s KIS}{Research fellow, MTA SZTAKI, Budapest, Hongrie\\
+\vspace{0.3cm}}{Examinateur}
+\makesomeone{judge}{5}{Philippe LABORIE}{Principal Scientist, IBM, Paris\\
+\vspace{0.3cm}}{Examinateur}
+\makesomeone{judge}{6}{Pierre LOPEZ}{Directeur de recherche au CNRS, LAAS-CNRS\\
+\vspace{0.3cm}}{Directeur
   de thèse} 
-\makesomeone{judge}{7}{Alain QUILLIOT}{Professeur, Université Blaise Pascal, Clermont-Ferrand }{Examinateur}
+\makesomeone{judge}{7}{Alain QUILLIOT}{Professeur, Université Blaise Pascal, Clermont-Ferrand\\
+\vspace{0.3cm}}{Examinateur}
 \makesomeone{judge}{8}{Claude-Guy QUIMPER}{Professeur agrégé,
   Université Laval, Québec, Canada}{Rapporteur}
 
@@ -55,6 +64,9 @@
 \begin{document}
 \makeflyleaf
 \doparttoc
+\input{remerciements.tex}%
+\clearemptydoublepage%
+
 \tableofcontents
 %
 \clearemptydoublepage%
@@ -71,7 +83,7 @@
 \input{intro.tex}
 %
 \clearemptydoublepage%
-\input{part1/chap1.tex}%
+\input{part1/chap1.tex}
 \clearemptydoublepage%
 \input{part2/PPC.tex}
 %
